Fix #66 - navigation jump on scroll

--- a/source/stylesheets/objects/_header.sass
+++ b/source/stylesheets/objects/_header.sass
@@ -1,12 +1,11 @@
 .header
-  background: $object-background
-
-.header--sticky
   position: fixed
   width: 100%
-  background: $object-alt-background
+  background: $object-background
   z-index: 2
-  animation: slide-in .3s
+
+.header--alt
+  background: $object-alt-background
 
   .brand
     background-image: image-url('brand-inverse.svg')
@@ -14,8 +13,6 @@
   .nav--main
     > li > a
       color: $box-alt-heading-color
-      padding-top: ($base-spacing-unit / 1.5)
-      padding-bottom: ($base-spacing-unit / 1.5)
 
     &.nav--main--rwd
       > li
