--- a/source/stylesheets/objects/_hero.sass
+++ b/source/stylesheets/objects/_hero.sass
@@ -1,5 +1,5 @@
 .hero
-  padding-top: $double-spacing-unit
+  padding-top: $base-spacing-unit * 5
   padding-bottom: $quadruple-spacing-unit
   background: linear-gradient(45deg, $hero-base-background, $hero-alt-background)
   color: $hero-color
@@ -7,14 +7,6 @@
 .hero__slogan
   +typecsset-font-size(48px)
 
-+until($breakpoint-mobile)
-  .hero
-    padding-top: $base-spacing-unit
-    padding-bottom: $double-spacing-unit
-
 +until($breakpoint-phone)
-  .hero
-    padding-top: $halve-spacing-unit
-
   .hero__slogan
     +typecsset-font-size(40px)
